najalexyacc/example/naja/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> primario
Rule 2     program -> primario program
Rule 3     program -> NOVALINHA
Rule 4     primario -> controle
Rule 5     primario -> declaracao
Rule 6     primario -> definicao
Rule 7     primario -> atribuicao
Rule 8     primario -> chamada
Rule 9     primario -> defsubfuncao
Rule 10    primario -> NOVALINHA primario
Rule 11    controle -> se
Rule 12    controle -> enquanto
Rule 13    controle -> para
Rule 14    declaracao -> TIPO ID
Rule 15    empty -> <empty>
Rule 16    senaosemais -> senaose senaosemais
Rule 17    senaosemais -> empty
Rule 18    senaose -> SENAOSE expressao : suite
Rule 19    senao -> SENAO : suite
Rule 20    senao -> empty
Rule 21    se -> SE expressao : suite senaosemais senao FIM
Rule 22    enquanto -> ENQUANTO expressao : suite FIM
Rule 23    intid -> INT
Rule 24    intid -> ID
Rule 25    para -> PARA ID DE intid ATE intid : suite FIM
Rule 26    definicao -> DEF TIPO ID ( params ) : suite FIM
Rule 27    defsubfuncao -> DEF VAZIO ID ( params ) : suite FIM
Rule 28    atribuicao -> ID [ INT ] = valor
Rule 29    atribuicao -> ID = valor
Rule 30    valorvalor -> , valor valorvalor
Rule 31    valorvalor -> empty
Rule 32    chamada -> ID ( valor valorvalor )
Rule 33    chamada -> ID ( )
Rule 34    valor -> ID
Rule 35    valor -> literal
Rule 36    valor -> chamada
Rule 37    valor -> CONSTANTE
Rule 38    expressao -> exp_ou
Rule 39    comparacao -> valor
Rule 40    comparacao -> valor operador_comp valor
Rule 41    operador_comp -> <
Rule 42    operador_comp -> >
Rule 43    operador_comp -> IGUIG
Rule 44    operador_comp -> MAIORIG
Rule 45    operador_comp -> MENORIG
Rule 46    operador_comp -> DIF
Rule 47    exponenciacao -> comparacao
Rule 48    exponenciacao -> comparacao EXP exp_u
Rule 49    exp_u -> exponenciacao
Rule 50    exp_u -> - exp_u
Rule 51    exp_u -> + exp_u
Rule 52    param -> declaracao
Rule 53    params -> param , params
Rule 54    params -> param
Rule 55    params -> empty
Rule 56    retorna -> RETORNA expressao
Rule 57    imprime -> IMPRIME expressao
Rule 58    op_aum -> MAISIG
Rule 59    op_aum -> MENOSIG
Rule 60    op_aum -> MULTIG
Rule 61    op_aum -> DIVIG
Rule 62    op_aum -> MODIG
Rule 63    op_aum -> EXPIG
Rule 64    exp_m -> exp_u
Rule 65    exp_m -> exp_m * exp_u
Rule 66    exp_m -> exp_m DIVINT exp_u
Rule 67    exp_m -> exp_m / exp_u
Rule 68    exp_a -> exp_m
Rule 69    exp_a -> exp_a + exp_m
Rule 70    exp_a -> exp_a - exp_m
Rule 71    exp_ou -> exp_e
Rule 72    exp_ou -> exp_ou OU exp_e
Rule 73    exp_e -> exp_nao
Rule 74    exp_e -> exp_e E exp_nao
Rule 75    exp_nao -> exp_a
Rule 76    exp_nao -> ! exp_nao
Rule 77    suite -> afirmacao
Rule 78    suite -> afirmacao NOVALINHA suite
Rule 79    suite -> NOVALINHA suite
Rule 80    suite -> empty
Rule 81    afirmacao -> afirm_simples
Rule 82    afirmacao -> afirm_composto
Rule 83    afirm_simples -> atribuicao
Rule 84    afirm_simples -> atribuicao_aumentada
Rule 85    afirm_simples -> imprime
Rule 86    afirm_simples -> retorna
Rule 87    afirm_simples -> QUEBRA
Rule 88    afirm_simples -> CONTINUA
Rule 89    afirm_composto -> se
Rule 90    afirm_composto -> enquanto
Rule 91    afirm_composto -> para
Rule 92    atribuicao_aumentada -> ID op_aum valor
Rule 93    literal -> PALAVRA
Rule 94    literal -> INT
Rule 95    literal -> REAL

Terminals, with rules where they appear

!                    : 76
(                    : 26 27 32 33
)                    : 26 27 32 33
*                    : 65
+                    : 51 69
,                    : 30 53
-                    : 50 70
/                    : 67
:                    : 18 19 21 22 25 26 27
<                    : 41
=                    : 28 29
>                    : 42
ATE                  : 25
CONSTANTE            : 37
CONTINUA             : 88
DE                   : 25
DEF                  : 26 27
DIF                  : 46
DIVIG                : 61
DIVINT               : 66
E                    : 74
ENQUANTO             : 22
EXP                  : 48
EXPIG                : 63
FIM                  : 21 22 25 26 27
ID                   : 14 24 25 26 27 28 29 32 33 34 92
IGUIG                : 43
IMPRIME              : 57
INT                  : 23 28 94
MAIORIG              : 44
MAISIG               : 58
MENORIG              : 45
MENOSIG              : 59
MODIG                : 62
MULTIG               : 60
NOVALINHA            : 3 10 78 79
OU                   : 72
PALAVRA              : 93
PARA                 : 25
QUEBRA               : 87
REAL                 : 95
RETORNA              : 56
SE                   : 21
SENAO                : 19
SENAOSE              : 18
TIPO                 : 14 26
VAZIO                : 27
[                    : 28
]                    : 28
error                : 

Nonterminals, with rules where they appear

afirm_composto       : 82
afirm_simples        : 81
afirmacao            : 77 78
atribuicao           : 7 83
atribuicao_aumentada : 84
chamada              : 8 36
comparacao           : 47 48
controle             : 4
declaracao           : 5 52
definicao            : 6
defsubfuncao         : 9
empty                : 17 20 31 55 80
enquanto             : 12 90
exp_a                : 69 70 75
exp_e                : 71 72 74
exp_m                : 65 66 67 68 69 70
exp_nao              : 73 74 76
exp_ou               : 38 72
exp_u                : 48 50 51 64 65 66 67
exponenciacao        : 49
expressao            : 18 21 22 56 57
imprime              : 85
intid                : 25 25
literal              : 35
op_aum               : 92
operador_comp        : 40
para                 : 13 91
param                : 53 54
params               : 26 27 53
primario             : 1 2 10
program              : 2 0
retorna              : 86
se                   : 11 89
senao                : 21
senaose              : 16
senaosemais          : 16 21
suite                : 18 19 21 22 25 26 27 78 79
valor                : 28 29 30 32 39 40 40 92
valorvalor           : 30 32

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . primario
    (2) program -> . primario program
    (3) program -> . NOVALINHA
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite FIM
    (28) atribuicao -> . ID [ INT ] = valor
    (29) atribuicao -> . ID = valor
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )
    (27) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    NOVALINHA       shift and go to state 3
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    para                           shift and go to state 9
    primario                       shift and go to state 6
    chamada                        shift and go to state 10
    defsubfuncao                   shift and go to state 16
    program                        shift and go to state 7
    atribuicao                     shift and go to state 15
    controle                       shift and go to state 8
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    se                             shift and go to state 18

state 1

    (25) para -> PARA . ID DE intid ATE intid : suite FIM

    ID              shift and go to state 19


state 2

    (26) definicao -> DEF . TIPO ID ( params ) : suite FIM
    (27) defsubfuncao -> DEF . VAZIO ID ( params ) : suite FIM

    TIPO            shift and go to state 20
    VAZIO           shift and go to state 21


state 3

    (3) program -> NOVALINHA .
    (10) primario -> NOVALINHA . primario
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite FIM
    (28) atribuicao -> . ID [ INT ] = valor
    (29) atribuicao -> . ID = valor
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )
    (27) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    $end            reduce using rule 3 (program -> NOVALINHA .)
    NOVALINHA       shift and go to state 22
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    para                           shift and go to state 9
    primario                       shift and go to state 23
    chamada                        shift and go to state 10
    defsubfuncao                   shift and go to state 16
    atribuicao                     shift and go to state 15
    controle                       shift and go to state 8
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    se                             shift and go to state 18

state 4

    (12) controle -> enquanto .

    NOVALINHA       reduce using rule 12 (controle -> enquanto .)
    TIPO            reduce using rule 12 (controle -> enquanto .)
    DEF             reduce using rule 12 (controle -> enquanto .)
    ID              reduce using rule 12 (controle -> enquanto .)
    SE              reduce using rule 12 (controle -> enquanto .)
    ENQUANTO        reduce using rule 12 (controle -> enquanto .)
    PARA            reduce using rule 12 (controle -> enquanto .)
    $end            reduce using rule 12 (controle -> enquanto .)


state 5

    (14) declaracao -> TIPO . ID

    ID              shift and go to state 24


state 6

    (1) program -> primario .
    (2) program -> primario . program
    (1) program -> . primario
    (2) program -> . primario program
    (3) program -> . NOVALINHA
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite FIM
    (28) atribuicao -> . ID [ INT ] = valor
    (29) atribuicao -> . ID = valor
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )
    (27) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    $end            reduce using rule 1 (program -> primario .)
    NOVALINHA       shift and go to state 3
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    para                           shift and go to state 9
    primario                       shift and go to state 6
    chamada                        shift and go to state 10
    defsubfuncao                   shift and go to state 16
    program                        shift and go to state 25
    atribuicao                     shift and go to state 15
    controle                       shift and go to state 8
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    se                             shift and go to state 18

state 7

    (0) S' -> program .



state 8

    (4) primario -> controle .

    NOVALINHA       reduce using rule 4 (primario -> controle .)
    TIPO            reduce using rule 4 (primario -> controle .)
    DEF             reduce using rule 4 (primario -> controle .)
    ID              reduce using rule 4 (primario -> controle .)
    SE              reduce using rule 4 (primario -> controle .)
    ENQUANTO        reduce using rule 4 (primario -> controle .)
    PARA            reduce using rule 4 (primario -> controle .)
    $end            reduce using rule 4 (primario -> controle .)


state 9

    (13) controle -> para .

    NOVALINHA       reduce using rule 13 (controle -> para .)
    TIPO            reduce using rule 13 (controle -> para .)
    DEF             reduce using rule 13 (controle -> para .)
    ID              reduce using rule 13 (controle -> para .)
    SE              reduce using rule 13 (controle -> para .)
    ENQUANTO        reduce using rule 13 (controle -> para .)
    PARA            reduce using rule 13 (controle -> para .)
    $end            reduce using rule 13 (controle -> para .)


state 10

    (8) primario -> chamada .

    NOVALINHA       reduce using rule 8 (primario -> chamada .)
    TIPO            reduce using rule 8 (primario -> chamada .)
    DEF             reduce using rule 8 (primario -> chamada .)
    ID              reduce using rule 8 (primario -> chamada .)
    SE              reduce using rule 8 (primario -> chamada .)
    ENQUANTO        reduce using rule 8 (primario -> chamada .)
    PARA            reduce using rule 8 (primario -> chamada .)
    $end            reduce using rule 8 (primario -> chamada .)


state 11

    (6) primario -> definicao .

    NOVALINHA       reduce using rule 6 (primario -> definicao .)
    TIPO            reduce using rule 6 (primario -> definicao .)
    DEF             reduce using rule 6 (primario -> definicao .)
    ID              reduce using rule 6 (primario -> definicao .)
    SE              reduce using rule 6 (primario -> definicao .)
    ENQUANTO        reduce using rule 6 (primario -> definicao .)
    PARA            reduce using rule 6 (primario -> definicao .)
    $end            reduce using rule 6 (primario -> definicao .)


state 12

    (5) primario -> declaracao .

    NOVALINHA       reduce using rule 5 (primario -> declaracao .)
    TIPO            reduce using rule 5 (primario -> declaracao .)
    DEF             reduce using rule 5 (primario -> declaracao .)
    ID              reduce using rule 5 (primario -> declaracao .)
    SE              reduce using rule 5 (primario -> declaracao .)
    ENQUANTO        reduce using rule 5 (primario -> declaracao .)
    PARA            reduce using rule 5 (primario -> declaracao .)
    $end            reduce using rule 5 (primario -> declaracao .)


state 13

    (28) atribuicao -> ID . [ INT ] = valor
    (29) atribuicao -> ID . = valor
    (32) chamada -> ID . ( valor valorvalor )
    (33) chamada -> ID . ( )

    [               shift and go to state 27
    =               shift and go to state 28
    (               shift and go to state 26


state 14

    (22) enquanto -> ENQUANTO . expressao : suite FIM
    (38) expressao -> . exp_ou
    (71) exp_ou -> . exp_e
    (72) exp_ou -> . exp_ou OU exp_e
    (73) exp_e -> . exp_nao
    (74) exp_e -> . exp_e E exp_nao
    (75) exp_nao -> . exp_a
    (76) exp_nao -> . ! exp_nao
    (68) exp_a -> . exp_m
    (69) exp_a -> . exp_a + exp_m
    (70) exp_a -> . exp_a - exp_m
    (64) exp_m -> . exp_u
    (65) exp_m -> . exp_m * exp_u
    (66) exp_m -> . exp_m DIVINT exp_u
    (67) exp_m -> . exp_m / exp_u
    (49) exp_u -> . exponenciacao
    (50) exp_u -> . - exp_u
    (51) exp_u -> . + exp_u
    (47) exponenciacao -> . comparacao
    (48) exponenciacao -> . comparacao EXP exp_u
    (39) comparacao -> . valor
    (40) comparacao -> . valor operador_comp valor
    (34) valor -> . ID
    (35) valor -> . literal
    (36) valor -> . chamada
    (37) valor -> . CONSTANTE
    (93) literal -> . PALAVRA
    (94) literal -> . INT
    (95) literal -> . REAL
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )

    !               shift and go to state 43
    -               shift and go to state 36
    +               shift and go to state 35
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    exp_e                          shift and go to state 30
    exp_a                          shift and go to state 31
    comparacao                     shift and go to state 32
    exp_m                          shift and go to state 33
    expressao                      shift and go to state 34
    chamada                        shift and go to state 41
    valor                          shift and go to state 40
    exp_u                          shift and go to state 37
    literal                        shift and go to state 38
    exponenciacao                  shift and go to state 39
    exp_nao                        shift and go to state 47
    exp_ou                         shift and go to state 42

state 15

    (7) primario -> atribuicao .

    NOVALINHA       reduce using rule 7 (primario -> atribuicao .)
    TIPO            reduce using rule 7 (primario -> atribuicao .)
    DEF             reduce using rule 7 (primario -> atribuicao .)
    ID              reduce using rule 7 (primario -> atribuicao .)
    SE              reduce using rule 7 (primario -> atribuicao .)
    ENQUANTO        reduce using rule 7 (primario -> atribuicao .)
    PARA            reduce using rule 7 (primario -> atribuicao .)
    $end            reduce using rule 7 (primario -> atribuicao .)


state 16

    (9) primario -> defsubfuncao .

    NOVALINHA       reduce using rule 9 (primario -> defsubfuncao .)
    TIPO            reduce using rule 9 (primario -> defsubfuncao .)
    DEF             reduce using rule 9 (primario -> defsubfuncao .)
    ID              reduce using rule 9 (primario -> defsubfuncao .)
    SE              reduce using rule 9 (primario -> defsubfuncao .)
    ENQUANTO        reduce using rule 9 (primario -> defsubfuncao .)
    PARA            reduce using rule 9 (primario -> defsubfuncao .)
    $end            reduce using rule 9 (primario -> defsubfuncao .)


state 17

    (21) se -> SE . expressao : suite senaosemais senao FIM
    (38) expressao -> . exp_ou
    (71) exp_ou -> . exp_e
    (72) exp_ou -> . exp_ou OU exp_e
    (73) exp_e -> . exp_nao
    (74) exp_e -> . exp_e E exp_nao
    (75) exp_nao -> . exp_a
    (76) exp_nao -> . ! exp_nao
    (68) exp_a -> . exp_m
    (69) exp_a -> . exp_a + exp_m
    (70) exp_a -> . exp_a - exp_m
    (64) exp_m -> . exp_u
    (65) exp_m -> . exp_m * exp_u
    (66) exp_m -> . exp_m DIVINT exp_u
    (67) exp_m -> . exp_m / exp_u
    (49) exp_u -> . exponenciacao
    (50) exp_u -> . - exp_u
    (51) exp_u -> . + exp_u
    (47) exponenciacao -> . comparacao
    (48) exponenciacao -> . comparacao EXP exp_u
    (39) comparacao -> . valor
    (40) comparacao -> . valor operador_comp valor
    (34) valor -> . ID
    (35) valor -> . literal
    (36) valor -> . chamada
    (37) valor -> . CONSTANTE
    (93) literal -> . PALAVRA
    (94) literal -> . INT
    (95) literal -> . REAL
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )

    !               shift and go to state 43
    -               shift and go to state 36
    +               shift and go to state 35
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    exp_e                          shift and go to state 30
    exp_a                          shift and go to state 31
    comparacao                     shift and go to state 32
    exp_m                          shift and go to state 33
    expressao                      shift and go to state 49
    chamada                        shift and go to state 41
    exp_u                          shift and go to state 37
    literal                        shift and go to state 38
    exponenciacao                  shift and go to state 39
    exp_nao                        shift and go to state 47
    exp_ou                         shift and go to state 42
    valor                          shift and go to state 40

state 18

    (11) controle -> se .

    NOVALINHA       reduce using rule 11 (controle -> se .)
    TIPO            reduce using rule 11 (controle -> se .)
    DEF             reduce using rule 11 (controle -> se .)
    ID              reduce using rule 11 (controle -> se .)
    SE              reduce using rule 11 (controle -> se .)
    ENQUANTO        reduce using rule 11 (controle -> se .)
    PARA            reduce using rule 11 (controle -> se .)
    $end            reduce using rule 11 (controle -> se .)


state 19

    (25) para -> PARA ID . DE intid ATE intid : suite FIM

    DE              shift and go to state 50


state 20

    (26) definicao -> DEF TIPO . ID ( params ) : suite FIM

    ID              shift and go to state 51


state 21

    (27) defsubfuncao -> DEF VAZIO . ID ( params ) : suite FIM

    ID              shift and go to state 52


state 22

    (10) primario -> NOVALINHA . primario
    (4) primario -> . controle
    (5) primario -> . declaracao
    (6) primario -> . definicao
    (7) primario -> . atribuicao
    (8) primario -> . chamada
    (9) primario -> . defsubfuncao
    (10) primario -> . NOVALINHA primario
    (11) controle -> . se
    (12) controle -> . enquanto
    (13) controle -> . para
    (14) declaracao -> . TIPO ID
    (26) definicao -> . DEF TIPO ID ( params ) : suite FIM
    (28) atribuicao -> . ID [ INT ] = valor
    (29) atribuicao -> . ID = valor
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )
    (27) defsubfuncao -> . DEF VAZIO ID ( params ) : suite FIM
    (21) se -> . SE expressao : suite senaosemais senao FIM
    (22) enquanto -> . ENQUANTO expressao : suite FIM
    (25) para -> . PARA ID DE intid ATE intid : suite FIM

    NOVALINHA       shift and go to state 22
    TIPO            shift and go to state 5
    DEF             shift and go to state 2
    ID              shift and go to state 13
    SE              shift and go to state 17
    ENQUANTO        shift and go to state 14
    PARA            shift and go to state 1

    enquanto                       shift and go to state 4
    para                           shift and go to state 9
    primario                       shift and go to state 23
    chamada                        shift and go to state 10
    defsubfuncao                   shift and go to state 16
    atribuicao                     shift and go to state 15
    controle                       shift and go to state 8
    definicao                      shift and go to state 11
    declaracao                     shift and go to state 12
    se                             shift and go to state 18

state 23

    (10) primario -> NOVALINHA primario .

    NOVALINHA       reduce using rule 10 (primario -> NOVALINHA primario .)
    TIPO            reduce using rule 10 (primario -> NOVALINHA primario .)
    DEF             reduce using rule 10 (primario -> NOVALINHA primario .)
    ID              reduce using rule 10 (primario -> NOVALINHA primario .)
    SE              reduce using rule 10 (primario -> NOVALINHA primario .)
    ENQUANTO        reduce using rule 10 (primario -> NOVALINHA primario .)
    PARA            reduce using rule 10 (primario -> NOVALINHA primario .)
    $end            reduce using rule 10 (primario -> NOVALINHA primario .)


state 24

    (14) declaracao -> TIPO ID .

    ,               reduce using rule 14 (declaracao -> TIPO ID .)
    )               reduce using rule 14 (declaracao -> TIPO ID .)
    NOVALINHA       reduce using rule 14 (declaracao -> TIPO ID .)
    TIPO            reduce using rule 14 (declaracao -> TIPO ID .)
    DEF             reduce using rule 14 (declaracao -> TIPO ID .)
    ID              reduce using rule 14 (declaracao -> TIPO ID .)
    SE              reduce using rule 14 (declaracao -> TIPO ID .)
    ENQUANTO        reduce using rule 14 (declaracao -> TIPO ID .)
    PARA            reduce using rule 14 (declaracao -> TIPO ID .)
    $end            reduce using rule 14 (declaracao -> TIPO ID .)


state 25

    (2) program -> primario program .

    $end            reduce using rule 2 (program -> primario program .)


state 26

    (32) chamada -> ID ( . valor valorvalor )
    (33) chamada -> ID ( . )
    (34) valor -> . ID
    (35) valor -> . literal
    (36) valor -> . chamada
    (37) valor -> . CONSTANTE
    (93) literal -> . PALAVRA
    (94) literal -> . INT
    (95) literal -> . REAL
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )

    )               shift and go to state 53
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    literal                        shift and go to state 38
    chamada                        shift and go to state 41
    valor                          shift and go to state 54

state 27

    (28) atribuicao -> ID [ . INT ] = valor

    INT             shift and go to state 55


state 28

    (29) atribuicao -> ID = . valor
    (34) valor -> . ID
    (35) valor -> . literal
    (36) valor -> . chamada
    (37) valor -> . CONSTANTE
    (93) literal -> . PALAVRA
    (94) literal -> . INT
    (95) literal -> . REAL
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )

    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    literal                        shift and go to state 38
    chamada                        shift and go to state 41
    valor                          shift and go to state 56

state 29

    (95) literal -> REAL .

    <               reduce using rule 95 (literal -> REAL .)
    >               reduce using rule 95 (literal -> REAL .)
    IGUIG           reduce using rule 95 (literal -> REAL .)
    MAIORIG         reduce using rule 95 (literal -> REAL .)
    MENORIG         reduce using rule 95 (literal -> REAL .)
    DIF             reduce using rule 95 (literal -> REAL .)
    EXP             reduce using rule 95 (literal -> REAL .)
    *               reduce using rule 95 (literal -> REAL .)
    DIVINT          reduce using rule 95 (literal -> REAL .)
    /               reduce using rule 95 (literal -> REAL .)
    +               reduce using rule 95 (literal -> REAL .)
    -               reduce using rule 95 (literal -> REAL .)
    E               reduce using rule 95 (literal -> REAL .)
    OU              reduce using rule 95 (literal -> REAL .)
    :               reduce using rule 95 (literal -> REAL .)
    NOVALINHA       reduce using rule 95 (literal -> REAL .)
    FIM             reduce using rule 95 (literal -> REAL .)
    SENAOSE         reduce using rule 95 (literal -> REAL .)
    SENAO           reduce using rule 95 (literal -> REAL .)
    TIPO            reduce using rule 95 (literal -> REAL .)
    DEF             reduce using rule 95 (literal -> REAL .)
    ID              reduce using rule 95 (literal -> REAL .)
    SE              reduce using rule 95 (literal -> REAL .)
    ENQUANTO        reduce using rule 95 (literal -> REAL .)
    PARA            reduce using rule 95 (literal -> REAL .)
    $end            reduce using rule 95 (literal -> REAL .)
    ,               reduce using rule 95 (literal -> REAL .)
    )               reduce using rule 95 (literal -> REAL .)


state 30

    (71) exp_ou -> exp_e .
    (74) exp_e -> exp_e . E exp_nao

    OU              reduce using rule 71 (exp_ou -> exp_e .)
    NOVALINHA       reduce using rule 71 (exp_ou -> exp_e .)
    FIM             reduce using rule 71 (exp_ou -> exp_e .)
    SENAOSE         reduce using rule 71 (exp_ou -> exp_e .)
    SENAO           reduce using rule 71 (exp_ou -> exp_e .)
    :               reduce using rule 71 (exp_ou -> exp_e .)
    E               shift and go to state 57


state 31

    (75) exp_nao -> exp_a .
    (69) exp_a -> exp_a . + exp_m
    (70) exp_a -> exp_a . - exp_m

    E               reduce using rule 75 (exp_nao -> exp_a .)
    OU              reduce using rule 75 (exp_nao -> exp_a .)
    :               reduce using rule 75 (exp_nao -> exp_a .)
    NOVALINHA       reduce using rule 75 (exp_nao -> exp_a .)
    FIM             reduce using rule 75 (exp_nao -> exp_a .)
    SENAOSE         reduce using rule 75 (exp_nao -> exp_a .)
    SENAO           reduce using rule 75 (exp_nao -> exp_a .)
    +               shift and go to state 59
    -               shift and go to state 58


state 32

    (47) exponenciacao -> comparacao .
    (48) exponenciacao -> comparacao . EXP exp_u

    *               reduce using rule 47 (exponenciacao -> comparacao .)
    DIVINT          reduce using rule 47 (exponenciacao -> comparacao .)
    /               reduce using rule 47 (exponenciacao -> comparacao .)
    +               reduce using rule 47 (exponenciacao -> comparacao .)
    -               reduce using rule 47 (exponenciacao -> comparacao .)
    E               reduce using rule 47 (exponenciacao -> comparacao .)
    OU              reduce using rule 47 (exponenciacao -> comparacao .)
    :               reduce using rule 47 (exponenciacao -> comparacao .)
    NOVALINHA       reduce using rule 47 (exponenciacao -> comparacao .)
    FIM             reduce using rule 47 (exponenciacao -> comparacao .)
    SENAOSE         reduce using rule 47 (exponenciacao -> comparacao .)
    SENAO           reduce using rule 47 (exponenciacao -> comparacao .)
    EXP             shift and go to state 60


state 33

    (68) exp_a -> exp_m .
    (65) exp_m -> exp_m . * exp_u
    (66) exp_m -> exp_m . DIVINT exp_u
    (67) exp_m -> exp_m . / exp_u

    +               reduce using rule 68 (exp_a -> exp_m .)
    -               reduce using rule 68 (exp_a -> exp_m .)
    E               reduce using rule 68 (exp_a -> exp_m .)
    OU              reduce using rule 68 (exp_a -> exp_m .)
    :               reduce using rule 68 (exp_a -> exp_m .)
    NOVALINHA       reduce using rule 68 (exp_a -> exp_m .)
    FIM             reduce using rule 68 (exp_a -> exp_m .)
    SENAOSE         reduce using rule 68 (exp_a -> exp_m .)
    SENAO           reduce using rule 68 (exp_a -> exp_m .)
    *               shift and go to state 62
    DIVINT          shift and go to state 61
    /               shift and go to state 63


state 34

    (22) enquanto -> ENQUANTO expressao . : suite FIM

    :               shift and go to state 64


state 35

    (51) exp_u -> + . exp_u
    (49) exp_u -> . exponenciacao
    (50) exp_u -> . - exp_u
    (51) exp_u -> . + exp_u
    (47) exponenciacao -> . comparacao
    (48) exponenciacao -> . comparacao EXP exp_u
    (39) comparacao -> . valor
    (40) comparacao -> . valor operador_comp valor
    (34) valor -> . ID
    (35) valor -> . literal
    (36) valor -> . chamada
    (37) valor -> . CONSTANTE
    (93) literal -> . PALAVRA
    (94) literal -> . INT
    (95) literal -> . REAL
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )

    -               shift and go to state 36
    +               shift and go to state 35
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    comparacao                     shift and go to state 32
    chamada                        shift and go to state 41
    exp_u                          shift and go to state 65
    literal                        shift and go to state 38
    exponenciacao                  shift and go to state 39
    valor                          shift and go to state 40

state 36

    (50) exp_u -> - . exp_u
    (49) exp_u -> . exponenciacao
    (50) exp_u -> . - exp_u
    (51) exp_u -> . + exp_u
    (47) exponenciacao -> . comparacao
    (48) exponenciacao -> . comparacao EXP exp_u
    (39) comparacao -> . valor
    (40) comparacao -> . valor operador_comp valor
    (34) valor -> . ID
    (35) valor -> . literal
    (36) valor -> . chamada
    (37) valor -> . CONSTANTE
    (93) literal -> . PALAVRA
    (94) literal -> . INT
    (95) literal -> . REAL
    (32) chamada -> . ID ( valor valorvalor )
    (33) chamada -> . ID ( )

    -               shift and go to state 36
    +               shift and go to state 35
    ID              shift and go to state 45
    CONSTANTE       shift and go to state 46
    PALAVRA         shift and go to state 44
    INT             shift and go to state 48
    REAL            shift and go to state 29

    comparacao                     shift and go to state 32
    chamada                        shift and go to state 41
    exp_u                          shift and go to state 66
    literal                        shift and go to state 38
    exponenciacao                  shift and go to state 39
    valor                          shift and go to state 40

state 37

    (64) exp_m -> exp_u .

    *               reduce using rule 64 (exp_m -> exp_u .)
    DIVINT          reduce using rule 64 (exp_m -> exp_u .)
    /               reduce using rule 64 (exp_m -> exp_u .)
    +               reduce using rule 64 (exp_m -> exp_u .)
    -               reduce using rule 64 (exp_m -> exp_u .)
    E               reduce using rule 64 (exp_m -> exp_u .)
    OU              reduce using rule 64 (exp_m -> exp_u .)
    :               reduce using rule 64 (exp_m -> exp_u .)
    NOVALINHA       reduce using rule 64 (exp_m -> exp_u .)
    FIM             reduce using rule 64 (exp_m -> exp_u .)
    SENAOSE         reduce using rule 64 (exp_m -> exp_u .)
    SENAO           reduce using rule 64 (exp_m -> exp_u .)


state 38

    (35) valor -> literal .
